@@ -67,13 +67,15 @@ struct _EmpathyChatClass {
 	GObjectClass parent;
 
 	/* VTable */
-	const gchar *    (*get_name)            (EmpathyChat    *chat);
-	gchar *          (*get_tooltip)         (EmpathyChat    *chat);
-	const gchar *    (*get_status_icon_name)(EmpathyChat    *chat);
-	GtkWidget *      (*get_widget)          (EmpathyChat    *chat);
-	gboolean         (*is_group_chat)       (EmpathyChat    *chat);
-	void             (*set_tp_chat)         (EmpathyChat    *chat,
+	const gchar *    (*get_name)            (EmpathyChat   *chat);
+	gchar *          (*get_tooltip)         (EmpathyChat   *chat);
+	const gchar *    (*get_status_icon_name)(EmpathyChat   *chat);
+	GtkWidget *      (*get_widget)          (EmpathyChat   *chat);
+	gboolean         (*is_group_chat)       (EmpathyChat   *chat);
+	void             (*set_tp_chat)         (EmpathyChat   *chat,
 						 EmpathyTpChat *tp_chat);
+	gboolean         (*key_press_event)     (EmpathyChat   *chat,
+						 GdkEventKey   *event);
 };
 
 GType             empathy_chat_get_type              (void);
